# lazychart

./: .gitignore  README.md  commit_history.txt  devlog.md  pyproject.toml  pytest.ini  setup.cfg
docs/: devlog.md
examples/: demo_usage.ipynb  example_data.py
src/lazychart/: __init__.py  backup.py  colors.py  core.py  log.py
tests/: test_core.py
